grammar and punctuation

--- a/docs/7-interviews/72-literature.tex
+++ b/docs/7-interviews/72-literature.tex
@@ -9,10 +9,10 @@ Energy modeling has focused on energy systems at national and regional scales
 due to the traditionally centralized nature of energy infrastructure. However,
 the spread of \acp{der} suggests that municipalities have an opportunity to play
 a larger role in shaping the clean energy transition
-\cite{shen_facilitating_2021}. Despite this, both Ben Amer et al. 2020, and
+\cite{shen_facilitating_2021}. Despite this, both Ben Amer et al. 2020 and
 Johannsen et al. 2021 found that \acp{esom} are seldom used at the municipal
 level \cite{ben_amer_too_2020,johannsen_designing_2021}. These studies agree
-that municipal planners do not have time nor the requisite expertise to use
+that municipal planners do not have the time or the requisite expertise to use
 \acp{esom} themselves and generally hire consultants to perform the analyses,
 when needed. They further argue that municipal planners do not employ \acp{esom}
 because input data are difficult to find, the models do not have a scope
@@ -23,7 +23,7 @@ understandability and clear communication \cite{susser_better_2022}. All three
 studies conclude that greater collaboration and earlier involvement between
 modelers and planners would yield superior results. Only Ben Amer et al.
 identify consulting and personnel costs as potential barriers to incorporating
-modeling results into decision making processes.
+modeling results into decision-making processes.
 
 % \textcolor{red}{Is the hypothesis I am testing with this study that
 % ``municipalities would be better equipped to plan and design their energy
@@ -33,7 +33,7 @@ modeling results into decision making processes.
 \subsection{Energy justice and planning}
 
 There is, to date, limited empirical work that investigates the inclusion of
-justice into formal planning proceses at either state or municipal levels. One
+justice into formal planning processes at either the state or municipal levels. One
 study by Diezmart\'inez et al. looked at 58 climate action plans sampled from
 the 100 largest U.S. cities \cite{diezmartinez_us_2022}. This study found that,
 of the 58 climate action plans, roughly two-thirds of them attend to either
@@ -69,7 +69,7 @@ for energy justice.
     at the expense of political, economic, or social justice.
 \end{enumerate}
 The authors argue that these six principles should be used together when
-crafting just energy policy.
+crafting a just energy policy.
 
 % \subsection{Modeling for justice}
 
