--- a/docs/7-interviews/73-methodology.tex
+++ b/docs/7-interviews/73-methodology.tex
@@ -11,10 +11,10 @@ planning within Illinois. A multiple-case study also enhances validity by
 enabling replication and comparison \cite{johannsen_designing_2021,
 yin_case_2018}. Further, since one purpose of this study is to evaluate the
 design and applicability of the tool, \ac{osier}, a multiple-case study design
-will strengthen software changes and feature additions and support \ac{osier}'s
+will strengthen software changes and feature additions, and support \ac{osier}'s
 use in other locations and contexts. The raw data include interview
 transcriptions and the relevant municipal climate and energy plans, if
-available. The interviews were transcribed with the ``listen and revise method''
+available. The interviews were transcribed with the ``listen and revise'' method
 using the Whisper transcription tool \cite{battaglia_listen_2024}. Whisper uses
 \ac{ai} to automate the transcription process. Both the data and the \ac{ai}
 model used to transcribe the interview audio were hosted locally (i.e., without
@@ -32,7 +32,7 @@ Whisper interface.
 \end{figure}
 
 The transcribed interviews were initially coded using a deductive approach
-aligned with three aims of this study:
+aligned with the three aims of this study:
 \begin{enumerate}
     \item identify how (if) energy models are used to support energy planning at
     local and state levels,
@@ -58,11 +58,11 @@ Figure \ref{fig:taguette} shows a screenshot of the \texttt{Taguette} software.
 \subsection{Interview Data Collection}
 
 A total of thirteen interviews were conducted virtually using the Zoom
-teleconferencing software through the second half of 2024 and beginning of 2025
+teleconferencing software through the second half of 2024 and beginning of 2025,
 using a semi-structured approach based on an interview guide designed according
 to five main topics (for details, see Appendix \ref{chapter:interview-guide}).
 \begin{enumerate}
-    \item Background --- learn about the interviewees experience and background
+    \item Background --- learn about the interviewees' experience and background
     with energy planning in their context.
     \item Existing planning processes --- clarify the processes used to develop
     climate action plans and energy policies.
@@ -75,18 +75,17 @@ to five main topics (for details, see Appendix \ref{chapter:interview-guide}).
 \end{enumerate}
 The interviewees were chosen through a combination of purposive and snowball
 sampling to identify staff with sufficient and relevant energy planning
-experience. Each interviewee is involved in decision making, planning, or
+experience. Each interviewee is involved in decision-making, planning, or
 advocacy in their respective context. Table \ref{tab:interviewees} summarizes
 the interviewees for this study. The \textit{organization} column refers to the
 organization that either employs, or is represented by, the interviewee. The
-\textit{type} column assigns the interviewee a broad category including
+\textit{type} column assigns the interviewee to a broad category including
 \begin{enumerate}
-    \item practicioner --- someone involved in the process of energy planning
-    and/or carries out policy directives from policy makers,
+    \item practitioner --- someone involved in the process of energy planning
+    and/or carries out policy directives from policymakers,
     \item advocate --- a person or organization that lobbies for policy outcomes
     on behalf of a group of stakeholders,
-    \item policy maker --- someone that participates in the ultimate decision
-    making related to energy policy.
+    \item policymaker --- someone who participates in the ultimate decision-making related to energy policy.
 \end{enumerate}
     
 \begin{table}[ht!]
