--- a/docs/7-interviews/74-regions.tex
+++ b/docs/7-interviews/74-regions.tex
@@ -54,7 +54,7 @@ energy choices elsewhere within the state. There are several important
 energy-related entities that operate in Illinois.
 
 \begin{enumerate}
-    \item \acf{icc} --- The \ac{icc} regulates \acp{iou} including electricity,
+    \item \acf{icc} --- The \ac{icc} regulates \acp{iou}, including electricity,
     gas, and water utilities. The \ac{icc} presides over rate cases, proceedings
     that set utility delivery rates which go towards cost recovery for
     \acp{iou}. The Commission is charged with balancing ``the interests of
@@ -64,22 +64,22 @@ energy-related entities that operate in Illinois.
     \cite{illinois_commerce_commision_icc_citizens_2022}.
     \item \acf{ipa} --- The \ac{ipa} is responsible for developing annual
     procurement plans and manages power purchases for residential and small
-    commercial customers that have not switched to an \ac{ares} (i.e., customers
+    commercial customers who have not switched to an \ac{ares} (i.e., customers
     that receive ``default supply'').
-    \item Illinois \acf{cub} --- the Illinois \ac{cub} formed in 1983 after
+    \item Illinois \acf{cub} --- the Illinois \ac{cub} was formed in 1983 after
     Illinois passed the Citizen's Utility Board Act
     \cite{illinois_83rd_general_assembly_citizens_1983}. The \ac{cub} is a
     nonpartisan organization that educates consumers and advocates for public
     health and affordable utilities at the \ac{icc}. Indeed, the \ac{cub} Act
-    afforded the orgnanization regulatory standing which allows them to
+    afforded the organization regulatory standing, which allows it to
     introduce bills at the regulatory level. \ac{cub} also intervenes at the
     municipal level in front of city councils. Particularly those with
     municipally-owned utilities, such as Naperville, Illinois.
     \item \acf{imea} --- The \ac{imea} is a non-profit business known as a joint
-    action agency that procures electricity on behalf its 32 member
+    action agency that procures electricity on behalf of its 32 member
     municipalities through energy purchases on the open electricity market and
     full or partial ownership of generating resources. All of \ac{imea}'s member
-    municipalities operate their own utilties independent from Ameren or ComeEd.
+    municipalities operate their own utilities independently from Ameren or ComeEd.
     \item \acf{icea} --- The \ac{icea} is a lobbying organization that
     represents the interests of various \acp{ares} and ``advance retail
     competition, customer choice, and competitive retail energy issues in the
@@ -89,7 +89,7 @@ energy-related entities that operate in Illinois.
 
 \noindent
 In 2021, Illinois legislators passed the \ac{ceja} bill
-\cite{harmon_climate_2021} which did several things for Illinois such as
+\cite{harmon_climate_2021}, which did several things for Illinois, such as
 \begin{enumerate}
     \item setting a target of 100\% clean energy by 2050,
     \item establishing a ``Zero Emissions Credit'' to support financially
@@ -111,24 +111,24 @@ not define the terms ``justice'' or ``environmental justice,'' but it does
 describe two types of ``Equity Investment Eligible Communities'':
 \begin{enumerate}
     \item \textit{Environmental justice communities} that were identified by
-    U.S. EPA as having higher risk of exposure to pollution based on
+    the U.S. EPA as having a higher risk of exposure to pollution based on
     environmental and socioeconomic factors.
     \item \textit{Restore. Reinvest. Renew. (R3 Areas)}, communities that have
     been harmed by violence, excessive incarceration, and economic
     disinvestment.
 \end{enumerate}
-These equity eligible communities are intended to receive at least 40\% of
-benefits from solar energy and energy efficiency programs, workforce development
+These equity-eligible communities are intended to receive at least 40\% of
+the benefits from solar energy and energy efficiency programs, workforce development,
 and contractor accelerator programs, electric vehicle deployment, and utility
 infrastructure planning \cite{kibbey_state_2024}.
 
 \subsection{\acf{uiuc}} 
 
 The \acl{uiuc} (\acs{uiuc} or ``The University''), Illinois' largest university,
-straddles the two municipalities of Champaign and Urbana and its student
-enrollment rivals the populations of its neighbors. \ac{uiuc} has uniquely
-diverse energy system including a wholly owned subsidiary company, \ac{pei},
-that owns and operates energy supply and distribution for the campus
+straddles the two municipalities of Champaign and Urbana, and its student
+enrollment rivals the populations of its neighbors. \ac{uiuc} has a uniquely
+diverse energy system, including a wholly owned subsidiary company, \ac{pei},
+which owns and operates energy supply and distribution for the campus
 \cite{affiliated_engineers_inc_utilities_2015}. \ac{pei} also enables \ac{uiuc}
 to participate in the open electricity market, buying and selling wholesale
 electricity. On the supply side, \ac{pei} owns a coal and natural gas
@@ -139,10 +139,10 @@ the campus, as well as a chilled water storage system. \ac{uiuc} also has
 campus buildings. On the distribution side, \ac{pei} operates steam, electric,
 and gas distribution for the campus. 
 
-\ac{uiuc} published three climate action plans called \ac{icap}. The most recent
+\ac{uiuc} published three climate action plans called the \acf{icap}. The most recent
 \ac{icap} was published in 2020
 \cite{institute_for_sustainability_energy_and_environment_illinois_2020}. This
-climate action plan commits \ac{uiuc} to achieving net-zero campus emissions
+climate action plan commits \ac{uiuc} to achieving a net-zero campus emissions
 from all energy sectors by 2050 through a mix of new clean energy resources and
 energy efficiency measures. Figure \ref{fig:uiuc-emissions} shows the current
 progress, as of 2023, and the ultimate trajectory of this net-zero goal. The
@@ -168,16 +168,16 @@ demonstrates some consideration for recognition justice as well.
 Champaign and Urbana are neighboring cities surrounding \ac{uiuc}, which drives
 most of the economic activity in the area. Both cities lie in the \ac{miso}
 region of Illinois and receive electricity through the regulated utility,
-Ameren. Although they share some resources they have not coordinated on a shared
+Ameren. Although they share some resources, they have not coordinated on a shared
 climate action plan. Additionally, neither city has a current climate action
 plan. Urbana's most recent climate action plan spanned 2015 through 2020
 \cite{ryan_climate_2014} and Champaign's ``Growing Greener'' plan has not been
 updated since 2013 \cite{knight_champaign_2013}. Both plans suggest purchasing
-\acp{rec} to cover 100\% of electricity-use through \ac{mca} with an \ac{ares}.
+\acp{rec} to cover 100\% of electricity use through \ac{mca} with an \ac{ares}.
 However, Urbana's plan goes somewhat further by identifying strategies to
 purchase bundled \acp{rec}\footnote{A \ac{rec} can either be \textit{bundled} or
 \textit{unbundled}. The former are \acp{rec} that are packaged with the specific
-megawatthour that generated the \ac{rec}. The latter refers to \acp{rec} that
+megawatt-hour that generated the \ac{rec}. The latter refers to \acp{rec} that
 are traded separately from energy and are generally less expensive.} and install
 \ac{btm} solar panels on city facilities. Both climate plans mention ``social
 equity'' and although equity is never defined, mentions of equity are
@@ -189,21 +189,21 @@ the distributive aspect of justice described in Section
 Naperville is an affluent suburb of Chicago, Illinois that straddles Will and
 DuPage counties. The city operates its own electric utility but does not own any
 bulk generation sources. Instead, Naperville contracts with the \ac{imea}
-organization to procure electricity for its residents. The Naperville city
-council offers two ``sustainability'' plans. First is the Sustainability
+organization to procure electricity for its residents. The Naperville City
+Council offers two ``sustainability'' plans. First is the Sustainability
 Workplan, which is a brief document outlining the city's commitments
-\cite{mjolness_city_2025}. The Workplan has no quantified objectives nor
-timelines and its energy goals are restricted to efficiency improvements such as
-installing LED lights. Second, is a report authored by volunteers with the
+\cite{mjolness_city_2025}. The Workplan has no quantified objectives or
+timelines and its energy goals are narrowly focused on efficiency improvements such as
+installing LED lights. The second is a report authored by volunteers with the
 \acf{nest} entitled ``Sustainable Naperville 2036''
 \cite{trendler_sustainable_2021}. Although \ac{nest} is an advisory organization
 formed by the Naperville City Council, the targets outlined in this plan are not
 commitments set forth by the city council. The \ac{nest} report proposed
 strategies to limit Naperville's carbon emissions to 0.968 million metric tonnes
-of \ac{co2eq} by 2036 and achieving net-zero emissions by 2050. The primary
+of \ac{co2eq} by 2036 and achieve net-zero emissions by 2050. The primary
 means of reducing carbon emissions identified in the report are expanding local
 energy generation and eliminating electricity supplied from the Prairie State
-Coal Plant --- a coal plant partially owned by \ac{imea} which procures
+Coal Plant --- a coal plant partially owned by \ac{imea}, which procures
 electricity for its member communities, including Naperville. The 2036 report
 also identified ``energy equity'' as a sustainability objective. Although equity
 is not explicitly defined, the authors describe disproportionality and implore
