--- a/docs/7-interviews/75-markets.tex
+++ b/docs/7-interviews/75-markets.tex
@@ -10,8 +10,8 @@ consumer with arrows indicating directional relationships.
 
 First, Illinois belongs to two \acp{rto}, \ac{pjm} and \ac{miso}, which conduct
 wholesale energy auctions through which market participants purchase
-electricity. Residential customers do not participate directly in open energy
-market. Instead they interface with a utility or municipality which procures
+electricity. Residential customers do not participate directly in the open energy
+market. Instead, they interface with a utility or municipality that procures
 electricity on their behalf. Some municipalities, such as Naperville, own their
 own utilities. Second, Illinois restructured its electricity market in 1997,
 prohibiting \aclp{iou} from owning both transmission infrastructure and
@@ -39,9 +39,9 @@ municipalities. Municipalities that own and operate a utility may obtain
 electric supply by owning electric generation, participating in the energy
 market, or contracting with another organization, such as the \ac{imea}, to
 handle the supply procurement. In turn, \ac{imea} can procure energy by owning
-generating capacity, or through the energy market. Most municipalities in
+generating capacity or through the energy market. Most municipalities in
 Illinois are served by one of the two major \acp{iou}, Ameren or ComEd. Due to
-the Public Utilities Act of 1997, these utilities cannot profit on the supply of
+the Public Utilities Act of 1997, these utilities cannot profit from the supply of
 electricity \cite{illinois_90th_general_assembly_electric_1997}. Rather, their
 customers (consumers or municipalities) direct the utility to supply electricity
 from a chosen supplier. If customers do not choose a supplier, they will receive
@@ -52,7 +52,7 @@ choose the default supply.\footnote{An \ac{ares} is an entity certified by the
 \ac{icc} that sells electricity to customers. This electricity is generated
 through privately owned resources or through purchases from the electricity
 market.} Although not depicted in Figure \ref{fig:illinois-flow-chart},
-consumers that reside in a municipality without \ac{mca} may still choose to
+consumers who reside in a municipality without \ac{mca} may still choose to
 purchase electricity supply from an \ac{ares} as an individual. Of course,
 consumers and municipalities may, where permitted, obtain energy by investing in
 \ac{btm} resources, commonly rooftop solar panels or batteries. Municipalities
