--- a/docs/7-interviews/76-results.tex
+++ b/docs/7-interviews/76-results.tex
@@ -77,7 +77,7 @@ how much budget it allocates for a project.
     greatest public engagement we can do at \$10,000 in nine months. [\dots]
     Certain public engagement methods are going to reach certain kinds of people
     and others, other kinds of people. So we want to mix methods to try and get
-    as much of the population and cross-section of of demographics (Interviewee
+    as much of the population and a cross-section of demographics (Interviewee
     UP1).
 \end{quote}
 However, these public engagement methods primarily relate to delivering
@@ -91,7 +91,7 @@ action plan. Nor does Naperville have a formal process for developing a plan.
 However, \ac{nest}, Naperville's sustainability advisory organization, inserts
 itself in public meetings by ``making at least one public comment at every city
 council meeting. We've come to refer to it as `three minutes with \ac{nest}'"
-(Interviewee NA1). Unlike, Champaign and Urbana, Naperville controls its own
+(Interviewee NA1). Unlike Champaign and Urbana, Naperville controls its own
 municipal electric utility that distributes electricity to Naperville residents.
 Despite having its own utility, Naperville ceded control over their energy
 supply decisions to \ac{imea}. Interviewees from \ac{nest} and Illinois \ac{cub}
@@ -104,7 +104,7 @@ According to two interviewees
     position that, ``yeah, we [still] do planning. We [still] do resource
     planning. It's just as good as an IRP.'' The plan that they pulled out to
     justify that was about 20 pages and had some charts and graphs. But then
-    when we pulled out the 220 page document, which was their work in creating
+    when we pulled out the 220-page document, which was their work in creating
     an IRP, it was pretty obvious to every single person in the room that their
     planning is not at all as comprehensive as an IRP (Interviewee NA1).
 \end{quote}
@@ -130,13 +130,13 @@ deploy strategies that advance equity and justice in their communities.
 
 This section discusses the ways municipalities in Illinois, and the state
 government, conceptualize justice or equity and incorporate it into their
-decision making processes.
+decision-making processes.
 
 % justice definitions
 First, municipalities prefer the term ``equity'' to ``justice'' which is
 consistent with the findings of Diezmart\'inez et al
 \cite{diezmartinez_us_2022}. Second, most municipalities do not have formal
-definitions of equity but of them acknowledge disproportionality and
+definitions of equity but generally acknowledge disproportionality and
 marginalization. ``The equity angle of it is we don't want historically
 disenfranchised populations or really any segment of the population to be left
 behind we need everyone involved in the clean energy transition (Interviewee
@@ -237,7 +237,7 @@ Regarding ClearPath:
 \end{quote}
 
 None of the municipalities considered in this study, Naperville, Champaign,
-Urbana, nor \ac{uiuc}, use \acp{esom} to guide energy planning and investment
+Urbana, or \ac{uiuc}, use \acp{esom} to guide energy planning and investment
 decisions. Interviewees from Naperville believe that \ac{imea} conducts energy
 modeling to inform their purchasing and investment decisions but the details of
 this modeling are not shared with constituents.
@@ -346,7 +346,7 @@ IP2)'' and therefore less profit for the utility.
 % challenges with MCA
 The third barrier relates to energy supply choices in a deregulated electricity
 market. Since \acp{iou} do not profit from the supply or delivery of
-electricity, these utilities do not have any interest nor control in energy
+electricity, these utilities do not have any interest or control in energy
 supply decisions. Indeed, since Illinois has a deregulated electricity market,
 consumers are theoretically able to receive electricity from any supplier they
 prefer if they are unsatisfied with the default supply procured by the \ac{ipa}.
@@ -391,7 +391,7 @@ renewable energy capacity. Interviewee IP3 describes this issue
 So, for municipalities that do not have access to energy demand data, do not
 control the condition of electric distribution infrastructure, and for whom
 electric supply choices are not guaranteed to drive the development of new clean
-energy projects, it is understandable that city planners do not use \acp{esom}
+energy projects, it is understandable that city planners do not use \acp{esom},
 nor do they find the results from these tools particularly salient. 
 
 Now, let us turn to the second scenario, where a municipality does have its own
@@ -453,11 +453,11 @@ policy options or energy visions.
 \end{quote}
 
 Second, interviewees found that \ac{osier} could be useful for communicating
-with both decision makers and constituents. As well as generating buy-in with
+with both decision-makers and constituents. As well as generating buy-in with
 other staff members at an organization.
 \begin{quote}
     [W]hat I see is that this tool could give us the ability to communicate with
-    those decision makers who are not in the trenches about the details, maybe
+    those decision-makers who are not in the trenches about the details, maybe
     don't even know what renewable energy certificates are, or renewable
     identification numbers for renewable natural gas, or they're afraid of
     nuclear because they don't understand it at all. And those folks I think
