--- a/docs/7-interviews/77-discussion.tex
+++ b/docs/7-interviews/77-discussion.tex
@@ -22,7 +22,7 @@ and regional energy systems evinces an implicit understanding of these barriers.
 Municipalities can still benefit from mathematical optimization tools as long as
 a municipality has sufficient autonomy over its energy choices to impact the
 decision variables in the model. For example, a municipality that does not own
-its electric utility nor any generating resources would not benefit from a
+its electric utility or any generating resources would not benefit from a
 capacity expansion model that optimizes investments in generating resources. Of
 the municipalities considered in this study, \ac{uiuc} satisfies this condition
 the best and is the most likely to benefit from \acp{esom} in planning
@@ -86,8 +86,7 @@ suited by a different modeling paradigm than the one currently provided by
 incentive structures, or time of use rates --- issues related to human behavior
 --- are likely better addressed by \acp{abm}. Questions about energy efficiency
 might be better served by 1) \acp{bem} but also 2) better data about the cost of
-efficiency improvements. \ac{nrel} has a large amount of simulated building
-level energy use data along with the performance of various efficiency upgrades
+efficiency improvements. \ac{nrel} has a large amount of simulated building-level energy use data along with the performance of various efficiency upgrades
 but no information on cost \cite{wilson_end-use_2022}. \ac{osier} could readily
 represent efficiency as a ``technology'' option, but this would require capital
 cost data on a per kW basis. Some of this data exists but
@@ -95,7 +94,7 @@ the data have large uncertainties \cite{less_cost_2021}.
 
 
 \subsection{Limitations of this study}
-This study has a couple of limitations. First, despite the varied contexts all
+This study has a couple of limitations. First, despite the varied contexts, all
 of the study participants have an Illinois perspective. Illinois is a
 progressive state with a deregulated electricity market. Municipalities in less
 progressive states or states with vertically integrated electricity markets may
