--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -70,7 +70,7 @@
 \acro{co2eq}[CO$_2$-eq]{CO$_2$-equivalent}
 \acro{unece}[UNECE]{United Nations Economic Commission for Europe}
 \acro{nest}[NEST]{Naperville Environment and Sustainability Task Force}
-\acro{cub}[CUB]{Citizens Utility Board}
+\acro{cub}[CUB]{Citizens' Utility Board}
 \acro{rto}[RTO]{regional transmission authority}
 \acrodefplural{rto}[RTOs]{regional transmission authorities}
 \acro{ares}[ARES]{alternative retail electric supplier}
@@ -102,7 +102,7 @@
 \acro{iou}[IOU]{investor-owned utility}
 \acrodefplural{iou}[IOUs]{investor-owned utilities}
 \acro{pjm}[PJM]{PJM Interconnection}
-\acro{miso}[MISO]{Midcontinent Indenpendent System Operator}
+\acro{miso}[MISO]{Midcontinent Independent System Operator}
 \acro{btm}[BTM]{behind-the-meter}
 \acro{eia}[EIA]{Energy Information Administration}
 \acro{der}[DER]{distributed energy resource}
