--- a/docs/7-interviews/71-introduction.tex
+++ b/docs/7-interviews/71-introduction.tex
@@ -5,12 +5,12 @@ fill a gap in the literature and available modeling tools by developing a
 flexible multi-objective optimization framework that allows users to incorporate
 concepts of justice, the ``human dimension'' \cite{pfenninger_energy_2014}. This
 is possible because \ac{osier} enables users to optimize any quantifiable
-objective which encourages modelers to seek input from the communities they
+objective, which encourages modelers to seek input from the communities they
 model for their energy system priorities, as suggested by McGookin et al. 2024
 \cite{mcgookin_advancing_2024}, thereby elevating the recognition and procedural
 aspects of justice described in Chapter \ref{chapter:lit-review}. Additionally,
-\ac{osier} transcends scale limitations due to it's flexible design, making it
-useful for municipalities as well as larger governing units. This chapter
+\ac{osier} transcends scale limitations due to its flexible design, making it
+useful for both municipalities and larger governing units. This chapter
 attempts to validate these assertions by examining how local and state energy
 planners use \acp{esom} and the ways in which justice does or does not play a
 role in decision-making. To that end, this chapter considers a range of contexts
@@ -21,7 +21,7 @@ energy organizations (\acf{icc}, \acf{ipa}, \acf{icea}, and the Illinois
 energy planning participants within their respective contexts by interviewing
 city planners, a city council member, and various advisory staff. This study
 contributes to the existing literature on participatory and distributed energy
-planning as well as illustrating a path towards a holistic integration of energy
+planning, while also illustrating a path towards a holistic integration of energy
 justice and energy system engineering.
 
 The next section reviews the existing literature on decentralized energy
