initial commit for introduction

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -1,15 +1,6 @@
 \chapter{Introduction}
-
-% \section{Motivation}
-
-% \textcolor{red}{CO2 emissions}
-
-% \textcolor{red}{Emissions by energy source}
-
-% \section{Research Objectives}
-
-% \section{Reproducing this work}
-% Talk about \texttt{snakemake}, show the DAG... 
+\label{chapter:introduction}
+\input{1-introduction/1-introduction.tex}
 
 \chapter{Literature Review}
 \label{chapter:lit-review}
@@ -29,6 +20,6 @@
 
 \chapter{Energy modeling, planning, and justice}
 \label{chapter:communities}
-\input{7-interviews/70-outline}
+% \input{7-interviews/70-outline}
 
 \chapter{Conclusions}
