--- a/docs/1-introduction/1-introduction.tex
+++ b/docs/1-introduction/1-introduction.tex
@@ -87,3 +87,23 @@ as an \ac{esom} by comparing its results against an established representative
 \ref{chapter:proposal} outlines a proposal for the remaining work of this
 thesis.
 
+\section{Motivation}
+
+\textcolor{red}{CO2 emissions}
+
+\textcolor{red}{Emissions by energy source}
+
+\section{Research Objectives}
+
+\section{Reproducing this work}
+Talk about \texttt{snakemake}, show the DAG... 
+
+% \newpage
+% \begin{landscape}
+    \begin{figure}[h!]
+        \centering
+        \includegraphics[width=\columnwidth]{../analysis/dag.png}
+        \caption{The \ac{dag} illustrating the steps to produce this thesis.}
+        \label{fig:dag}
+    \end{figure}
+% \end{landscape}
