--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -8,6 +8,7 @@
 \usepackage{amsmath,amsthm,amssymb}
 \usepackage{minted}
 \usepackage{relsize}
+\usepackage{pdflscape}
 \usepackage[normalem]{ulem}
 \usepackage{pifont}
 \newcommand{\cmark}{\ding{51}}%
