--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -4084,6 +4084,23 @@ collective effort of all parties involved is greatly appreciated.},
 	file = {ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/DRQKF3ZL/S0149197016302116.html:text/html},
 }
 
+@article{wilson_best_2014,
+	title = {Best Practices for Scientific Computing},
+	volume = {12},
+	url = {http://dx.doi.org/10.1371/journal.pbio.1001745},
+	doi = {10.1371/journal.pbio.1001745},
+	abstract = {We describe a set of best practices for scientific software development, based on research and experience, that will improve scientists' productivity and the reliability of their software.},
+	pages = {e1001745},
+	number = {1},
+	journaltitle = {{PLoS} Biol},
+	shortjournal = {{PLoS} Biol},
+	author = {Wilson, Greg V. and Aruliah, D. A. and Brown, C. Titus and Chue Hong, Neil P. and Davis, Matt and Guy, Richard T. and Haddock, Steven H. D. and Huff, Kathryn D. and Mitchell, Ian M. and Plumbley, Mark D. and Waugh, Ben and White, Ethan P. and Wilson, Paul},
+	urldate = {2014-09-08},
+	date = {2014-01-07},
+	keywords = {Computer Science - Mathematical Software, Computer Science - Software Engineering, Include File on Website, recommendation, science, Science, software},
+	file = {1210.0530 PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/RUGPQ89Z/Wilson et al. - 2012 - Best Practices for Scientific Computing.pdf:application/pdf;1210.0530 PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/6BWMN925/Wilson et al. - 2012 - Best Practices for Scientific Computing.pdf:application/pdf;arXiv.org Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/GEAQU4PR/Wilson et al. - 2012 - Best Practices for Scientific Computing.html:text/html;arXiv.org Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/TNJ5VZBD/Wilson et al. - 2012 - Best Practices for Scientific Computing.html:text/html;PLoS Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/JG3XZ3EN/Wilson et al. - 2014 - Best Practices for Scientific Computing.pdf:application/pdf;PLoS Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/T7PS6IGX/Wilson et al. - 2014 - Best Practices for Scientific Computing.pdf:application/pdf;PLoS Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/NZPICHHU/Wilson et al. - 2014 - Best Practices for Scientific Computing.pdf:application/pdf;PLoS Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/DRSWE54I/Wilson et al. - 2014 - Best Practices for Scientific Computing.pdf:application/pdf;PLoS Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/JWG3964F/infodoi10.1371journal.pbio.html:text/html;PLoS Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/GVVR84ZK/infodoi10.1371journal.pbio.html:text/html;PLoS Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/A9HDSJBB/Wilson et al. - 2014 - Best Practices for Scientific Computing.html:text/html;PLoS Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/FXDIXXQ2/Wilson et al. - 2014 - Best Practices for Scientific Computing.html:text/html},
+}
+
 @article{liu_wind_2017,
 	title = {Wind turbine blade waste in 2050},
 	volume = {62},
@@ -21277,4 +21294,20 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	langid = {english},
 	doi = {10.2172/1854582},
 	file = {Wilson et al. - 2022 - End-Use Load Profiles for the U.S. Building Stock.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/2QPHHWJF/Wilson et al. - 2022 - End-Use Load Profiles for the U.S. Building Stock.pdf:application/pdf},
+}
+
+@misc{molder_sustainable_2021,
+	title = {Sustainable data analysis with Snakemake},
+	rights = {http://creativecommons.org/licenses/by/4.0/},
+	url = {https://f1000research.com/articles/10-33},
+	doi = {10.12688/f1000research.29032.2},
+	abstract = {Data analysis often entails a multitude of heterogeneous steps, from the application of various command line tools to the usage of scripting languages like R or Python for the generation of plots and tables. It is widely recognized that data analyses should ideally be conducted in a reproducible way.\&nbsp;Reproducibility enables technical validation and regeneration of results on the original or even new data. However, reproducibility alone is by no means sufficient to deliver an analysis that is of lasting impact (i.e., sustainable) for the field, or even just one research group. We postulate that it is equally important to ensure adaptability and transparency. The former describes the ability to modify the analysis to answer extended or slightly different research questions. The latter describes the ability to understand the analysis in order to judge whether it is not only technically, but methodologically valid. Here, we analyze the properties needed for a data analysis to become reproducible, adaptable, and transparent. We show how the popular workflow management system Snakemake can be used to guarantee this, and how it enables an ergonomic, combined, unified representation of all steps involved in data analysis, ranging from raw data processing, to quality control and fine-grained, interactive exploration and plotting of final results.},
+	number = {10:33},
+	publisher = {F1000Research},
+	author = {Mölder, Felix and Jablonski, Kim Philipp and Letcher, Brice and Hall, Michael B. and Tomkins-Tinch, Christopher H. and Sochat, Vanessa and Forster, Jan and Lee, Soohyun and Twardziok, Sven O. and Kanitz, Alexander and Wilm, Andreas and Holtgrewe, Manuel and Rahmann, Sven and Nahnsen, Sven and Köster, Johannes},
+	urldate = {2024-08-09},
+	date = {2021-04-19},
+	langid = {english},
+	keywords = {adaptability, data analysis, reproducibility, scalability, sustainability, transparency, workflow management},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/9T3QLGIP/Mölder et al. - 2021 - Sustainable data analysis with Snakemake.pdf:application/pdf},
 }
