adds arrows theorem

--- a/docs/1-introduction/1-introduction.tex
+++ b/docs/1-introduction/1-introduction.tex
@@ -1,5 +1,5 @@
 Climate change produced by greater atmospheric CO$_2$ concentrations
-\cite{kane_atmospheric_1996} from human activity has led to increased exposure
+\cite{kane_atmospheric_1996, lynas_greater_2021} from human activity has led to increased exposure
 to hazards worldwide and domestically: increased storm severity, rising sea
 levels, more extreme temperatures, hotter summers, and rising sea levels to name
 a few \cite{reidmiller_fourth_2018}. Data from the Mauna Loa Observatory,
