--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -118,5 +118,6 @@
 \acro{ptc}[PTC]{price-to-compare}
 \acro{abm}[ABM]{agent-based model}
 \acro{dag}[DAG]{directed acyclic graph}
+\acro{iia}[IIA]{Irrelevance of Independent Alternatives}
 
 
